Fix vertically alignment of USA flag.

--- a/styles/base.less
+++ b/styles/base.less
@@ -2726,8 +2726,9 @@ html.touch {
       .vol-usa {
         width: 75%;
         font-size: 0.583rem;
-        color: #555;
+        line-height: 2;
         text-align: right;
+        color: #555;
         svg {
           height: 10px;
           margin-right: 10px;
